force-app/main/default/objects/HealthcareFacility/fields/VCC_Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>VCC_Facility_Id__c</fullName>
    <label>Facility Id</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>