force-app/main/default/objects/HealthcareFacility/fields/VCC_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>VCC_Facility_Name__c</fullName>
    <description>The name of the healthcare facility</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Facility Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>