force-app/main/default/objects/HealthcareFacility/fields/VCC_Personas__c.field-meta.xml
<CustomField>
    <fullName>VCC_Personas__c</fullName>
    <description>Used to filter locations available to each role.</description>
    <inlineHelpText>Used to filter locations available to each role.</inlineHelpText>
    <label>Personas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Personas</valueSetName>
    </valueSet>
</CustomField>