force-app/main/default/objects/HealthcareFacility/fields/VCC_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>VCC_Site_Id__c</fullName>
    <description>The site ID number that is associated with the healthcare facility. The Site ID can be seen on the person account page under the station column in the facilities
        component.</description>
    <label>Site Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>