force-app/main/default/objects/HealthcareFacility/fields/VCC_VISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_VISN__c</fullName>
    <description>The VISN that the Facility is located in</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VISN</label>
    <length>2</length>
    <type>Text</type>
</CustomField>