force-app/main/default/objects/HealthcareFacility/recordTypes/VAHC_Healthcare_Facility.recordType-meta.xml
<RecordType>
    <fullName>VAHC_Healthcare_Facility</fullName>
    <active>true</active>
    <label>VAHC Healthcare Facility</label>
</RecordType>