force-app/main/default/objects/HealthcareFacility/listViews/All_HealthcareFacilities.listView-meta.xml
<ListView>
    <fullName>All_HealthcareFacilities</fullName>
    <columns>Name</columns>
    <columns>Location</columns>
    <columns>Account</columns>
    <columns>LocationType</columns>
    <columns>FacilityType</columns>
    <columns>VCC_VISN__c</columns>
    <columns>VCC_Personas__c</columns>
    <columns>VCC_Site_Id__c</columns>
    <columns>VCC_Location_IEN__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Healthcare Facilities</label>
</ListView>