force-app/main/default/objects/HealthcareFacility/listViews/VISN_0.listView-meta.xml
<ListView>
    <fullName>VISN_0</fullName>
    <columns>Name</columns>
    <columns>Location</columns>
    <columns>Account</columns>
    <columns>LocationType</columns>
    <columns>FacilityType</columns>
    <columns>VCC_VISN__c</columns>
    <columns>VCC_Personas__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VCC_Personas__c</field>
        <operation>equals</operation>
        <value>TED</value>
    </filters>
    <label>VISN 0</label>
</ListView>